# Runshphere

./: DESIGN.md  issue.txt  package-lock.json
RunSphere/: .gitignore  App.tsx  app.json  jest.config.js  jest.setup.js  package-lock.json  package.json
RunSphere/android/: build.gradle  gradle.properties  settings.gradle
RunSphere/android/app/: build.gradle
RunSphere/android/app/src/main/jni/: CMakeLists.txt
RunSphere/ios/: Podfile
RunSphere/ios/RunSphere/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
RunSphere/ios/RunSphere.xcodeproj/: project.pbxproj
RunSphere/patches/: react-native-maps+1.27.2.patch  react-native-screens+4.24.0.patch
RunSphere/src/components/: AppHeader.tsx  Avatar.tsx  DataChip.tsx  GhostButton.tsx  GradientButton.tsx  LiveRunMap.tsx  (+5 more)
backend/: .env.example  COMPLETION.md  PROJECT_VERIFICATION.md  QUICK_START.md  README.md  app.js  package-lock.json  package.json  server.js  thunder-collection.json
backend/scripts/: rebuildDailyAggregates.js
backend/test/: runService.test.js
stitch/community_dashboard/: code.html
stitch/community_feed/: code.html
stitch/home_dashboard/: code.html
stitch/leaderboard/: code.html
stitch/login/: code.html
stitch/map_view_velocity_neon/: code.html
stitch/notifications_velocity_neon/: code.html
stitch/profile/: code.html
stitch/run_tracking/: code.html
stitch/signup/: code.html
stitch/track_details_velocity_neon/: code.html
stitch/velocity_neon/: DESIGN.md
stitch_runsphere_app_ui_ux/kinetic_dashboard/: code.html
stitch_runsphere_app_ui_ux/kinetic_profile/: code.html
(+73 files in other folders)
